include/dss_capi.h

    

    /*! 
    {True | False*} Designates whether to allow duplicate names of objects
    */
    DSS_CAPI_DLL uint16_t Settings_Get_AllowDuplicates(void);
    /*! 
    List of Buses or (File=xxxx) syntax for the AutoAdd solution mode.
    */
    DSS_CAPI_DLL const char* Settings_Get_AutoBusList(void);
    /*! 
    {Multiphase * | PositiveSeq} Indicate if the circuit model is positive sequence.
    */
    DSS_CAPI_DLL int32_t Settings_Get_CktModel(void);
    DSS_CAPI_DLL void Settings_Set_CktModel(int32_t Value);
    /*! 
    Per Unit maximum voltage for Emergency conditions.
    */
    DSS_CAPI_DLL double Settings_Get_EmergVmaxpu(void);
    /*! 
    Per Unit minimum voltage for Emergency conditions.
    */
    DSS_CAPI_DLL double Settings_Get_EmergVminpu(void);
    /*! 
    Per Unit maximum voltage for Normal conditions.
    */
    DSS_CAPI_DLL double Settings_Get_NormVmaxpu(void);
    /*! 
    Per Unit minimum voltage for Normal conditions.
    */
    DSS_CAPI_DLL double Settings_Get_NormVminpu(void);
    /*! 
    {True | False*}  Locks Zones on energy meters to prevent rebuilding if a circuit change occurs.
    */
    DSS_CAPI_DLL uint16_t Settings_Get_ZoneLock(void);
    /*! 
    Sets all load allocation factors for all loads defined by XFKVA property to this value.
    */
    DSS_CAPI_DLL void Settings_Set_AllocationFactors(double Value);
    /*! 
    {True | False*} Designates whether to allow duplicate names of objects
    */
    DSS_CAPI_DLL void Settings_Set_AllowDuplicates(uint16_t Value);
    /*! 
    List of Buses or (File=xxxx) syntax for the AutoAdd solution mode.
    */
    DSS_CAPI_DLL void Settings_Set_AutoBusList(const char* Value);
    /*! 
    Per Unit maximum voltage for Emergency conditions.
    */
    DSS_CAPI_DLL void Settings_Set_EmergVmaxpu(double Value);
    /*! 
    Per Unit minimum voltage for Emergency conditions.
    */
    DSS_CAPI_DLL void Settings_Set_EmergVminpu(double Value);
    /*! 
    Per Unit maximum voltage for Normal conditions.
    */
    DSS_CAPI_DLL void Settings_Set_NormVmaxpu(double Value);
    /*! 
    Per Unit minimum voltage for Normal conditions.
    */
    DSS_CAPI_DLL void Settings_Set_NormVminpu(double Value);
    /*! 
    {True | False*}  Locks Zones on energy meters to prevent rebuilding if a circuit change occurs.
    */
    DSS_CAPI_DLL void Settings_Set_ZoneLock(uint16_t Value);
    /*! 
    Integer array defining which energy meter registers to use for computing losses
    */
    DSS_CAPI_DLL void Settings_Get_LossRegs(int32_t** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as Settings_Get_LossRegs but using the global buffer interface for results
    */
    DSS_CAPI_DLL void Settings_Get_LossRegs_GR(void);
    /*! 
    Weighting factor applied to Loss register values.
    */
    DSS_CAPI_DLL double Settings_Get_LossWeight(void);
    /*! 
    {True | False *} Gets value of trapezoidal integration flag in energy meters.
    */
    DSS_CAPI_DLL uint16_t Settings_Get_Trapezoidal(void);
    /*! 
    Array of Integers defining energy meter registers to use for computing UE
    */
    DSS_CAPI_DLL void Settings_Get_UEregs(int32_t** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as Settings_Get_UEregs but using the global buffer interface for results
    */
    DSS_CAPI_DLL void Settings_Get_UEregs_GR(void);
    /*! 
    Weighting factor applied to UE register values.
    */
    DSS_CAPI_DLL double Settings_Get_UEweight(void);
    /*! 
    Integer array defining which energy meter registers to use for computing losses
    */
    DSS_CAPI_DLL void Settings_Set_LossRegs(const int32_t* ValuePtr, int32_t ValueCount);
    /*! 
    Weighting factor applied to Loss register values.
    */
    DSS_CAPI_DLL void Settings_Set_LossWeight(double Value);
    /*! 
    {True | False *} Gets value of trapezoidal integration flag in energy meters.
    */
    DSS_CAPI_DLL void Settings_Set_Trapezoidal(uint16_t Value);
    /*! 
    Array of Integers defining energy meter registers to use for computing UE
    */
    DSS_CAPI_DLL void Settings_Set_UEregs(const int32_t* ValuePtr, int32_t ValueCount);
    /*! 
    Weighting factor applied to UE register values.
    */
    DSS_CAPI_DLL void Settings_Set_UEweight(double Value);
    /*! 
    {True | False*} Denotes whether to trace the control actions to a file.
    */
    DSS_CAPI_DLL uint16_t Settings_Get_ControlTrace(void);
    /*! 
    Array of doubles defining the legal voltage bases in kV L-L
    */
    DSS_CAPI_DLL void Settings_Get_VoltageBases(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as Settings_Get_VoltageBases but using the global buffer interface for results
    */
    DSS_CAPI_DLL void Settings_Get_VoltageBases_GR(void);
    /*! 
    {True | False*} Denotes whether to trace the control actions to a file.
    */
    DSS_CAPI_DLL void Settings_Set_ControlTrace(uint16_t Value);
    /*! 
    Array of doubles defining the legal voltage bases in kV L-L
    */
    DSS_CAPI_DLL void Settings_Set_VoltageBases(const double* ValuePtr, int32_t ValueCount);
    /*! 
    Name of LoadShape object that serves as the source of price signal data for yearly simulations, etc.
    */
    DSS_CAPI_DLL const char* Settings_Get_PriceCurve(void);
    /*! 
    Price Signal for the Circuit
    */
    DSS_CAPI_DLL double Settings_Get_PriceSignal(void);
    /*! 
    Name of LoadShape object that serves as the source of price signal data for yearly simulations, etc.
    */
    DSS_CAPI_DLL void Settings_Set_PriceCurve(const char* Value);
    /*! 
    Price Signal for the Circuit
    */
    DSS_CAPI_DLL void Settings_Set_PriceSignal(double Value);